--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -1,5 +1,5 @@
-@import '_variables';
-@import '_mixins';
-@import '_utils';
-@import '_reset';
-@import 'layout/layout';
+@import "_variables";
+@import "_mixins";
+@import "_utils";
+@import "_reset";
+@import "layout/layout";
