added salad, white cheese, yellow cheese, yogurt forms added success notification added fade animation component handled error messages for Select fields made tables horizontally scrollable when too large cleaned up compiler warnings

--- a/src/styles/layout/_header.scss
+++ b/src/styles/layout/_header.scss
@@ -27,8 +27,8 @@
         top: 50%;
         margin-top: -24px;
         display: none;
-
-
+        background:none;
+        border:0;
     }
 
     .page-title {
