--- a/src/styles/layout/_main.scss
+++ b/src/styles/layout/_main.scss
@@ -1,5 +1,6 @@
 .layout-main {
     height: 100%;
+    max-width: 1300px;
     padding-left: $sidebar-width; //100px $padding $padding #{$sidebar-width + $padding};
     padding-top: 70px;
 
