reduce content side padding on mobile

--- a/src/styles/layout/_main.scss
+++ b/src/styles/layout/_main.scss
@@ -6,6 +6,10 @@
 
     &-wrapper {
         padding: $padding;
+
+        @media only screen and (max-width: $breakpoint-768) {
+            padding: $padding/2
+        }
     }
 }
 
