add final <select> data, fix data entry when no previous data exists, fix sidebar issue

--- a/src/styles/layout/_main.scss
+++ b/src/styles/layout/_main.scss
@@ -1,5 +1,5 @@
 .layout-main {
-    height: 100%;
+    min-height: calc(100vh - 70px);
     max-width: 1300px;
     padding-left: $sidebar-width; //100px $padding $padding #{$sidebar-width + $padding};
     padding-top: 70px;
